将 eval 替换为 new Function 的形式

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-polyfill": "^6.26.0",
     "es6-promise": "^4.1.1",
     "isomorphic-fetch": "^2.2.1",
+    "lodash.debounce": "^4.0.8",
     "vformer": "^0.1.10",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
@@ -31,6 +32,7 @@
     "vuex-i18n": "^1.8.0"
   },
   "devDependencies": {
+    "ajv": "^6.5.3",
     "autoprefixer": "^7.1.6",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.0.1",
@@ -54,14 +56,17 @@
     "cross-env": "^5.1.0",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.7",
-    "eslint": "^3.19.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-html": "^3.0.0",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^3.0.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
