--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "@wangweiqi/vformer": "^0.2.0",
     "axios": "^0.16.2",
     "babel-polyfill": "^6.26.0",
     "es6-promise": "^4.1.1",
